{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 301,
  "lineage": "cbc667c6-6052-84ae-3852-e9de05e23f98",
  "resources": [
    {
      "module": "module.create_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0567f647e75c7bc05",
            "arn": "arn:aws:ec2:ap-southeast-2:001601475366:instance/i-04de01af6a9d04da7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04de01af6a9d04da7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "modular-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-091792558f3c2919a"
              }
            ],
            "primary_network_interface_id": "eni-091792558f3c2919a",
            "private_dns": "ip-192-168-1-94.ap-southeast-2.compute.internal",
            "private_ip": "192.168.1.94",
            "public_dns": "ec2-52-62-231-183.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.62.231.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0611abb1b2728545a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0515799d8f520edcb",
            "tags": {
              "Launched_By": "Terraform",
              "Name": "modular ec2 ubuntu webserver"
            },
            "tags_all": {
              "Launched_By": "Terraform",
              "Name": "modular ec2 ubuntu webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d8b295396cb71aa0"
            ]
          },
          "dependencies": [
            "module.create_eni.aws_network_interface.eni",
            "module.create_key_pair.aws_key_pair.key_pair",
            "module.create_sg.aws_security_group.sg",
            "module.create_subnet.aws_subnet.subnet",
            "module.create_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "create_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "192.168.1.94",
            "association_id": "eipassoc-040de097d316d07ba",
            "domain": "vpc",
            "id": "eipalloc-0cffccc9921e21ad0",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-091792558f3c2919a",
            "private_dns": "ip-192-168-1-94.ap-southeast-2.compute.internal",
            "private_ip": "192.168.1.94",
            "public_dns": "ec2-52-62-231-183.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.62.231.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Launched_By": "Terraform",
              "Name": "modular eip"
            },
            "tags_all": {
              "Launched_By": "Terraform",
              "Name": "modular eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.create_eni.aws_network_interface.eni",
            "module.create_igw.aws_internet_gateway.igw",
            "module.create_sg.aws_security_group.sg",
            "module.create_subnet.aws_subnet.subnet",
            "module.create_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_eni",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-091792558f3c2919a",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:a2:37:86:ba:8c",
            "private_dns_name": "ip-192-168-1-94.ap-southeast-2.compute.internal",
            "private_ip": "192.168.1.94",
            "private_ips": [
              "192.168.1.94"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d8b295396cb71aa0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0515799d8f520edcb",
            "tags": {
              "Launched_By": "Terraform",
              "Name": "modular eni"
            },
            "tags_all": {
              "Launched_By": "Terraform",
              "Name": "modular eni"
            }
          },
          "dependencies": [
            "module.create_sg.aws_security_group.sg",
            "module.create_subnet.aws_subnet.subnet",
            "module.create_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:001601475366:internet-gateway/igw-06bb7e68a6e3c188a",
            "id": "igw-06bb7e68a6e3c188a",
            "owner_id": "001601475366",
            "tags": {
              "Launched_By": "Terraform",
              "Name": "modular igw"
            },
            "tags_all": {
              "Launched_By": "Terraform",
              "Name": "modular igw"
            },
            "vpc_id": "vpc-00a44e02ad3311750"
          },
          "dependencies": [
            "module.create_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:001601475366:route-table/rtb-0edbcc406c771f2d4",
            "id": "rtb-0edbcc406c771f2d4",
            "owner_id": "001601475366",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06bb7e68a6e3c188a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Launched_By": "Terraform",
              "Name": "modular route table"
            },
            "tags_all": {
              "Launched_By": "Terraform",
              "Name": "modular route table"
            },
            "vpc_id": "vpc-00a44e02ad3311750"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_igw.aws_internet_gateway.igw",
            "module.create_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_route_table_assoc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061a53baee82b554f",
            "route_table_id": "rtb-0edbcc406c771f2d4",
            "subnet_id": "subnet-0515799d8f520edcb"
          },
          "dependencies": [
            "module.create_igw.aws_internet_gateway.igw",
            "module.create_route_table.aws_route_table.route_table",
            "module.create_subnet.aws_subnet.subnet",
            "module.create_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:001601475366:security-group/sg-0d8b295396cb71aa0",
            "description": "modular sg for webservers created by terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8b295396cb71aa0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL HTTPS ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "1.158.51.8/32"
                ],
                "description": "Custom SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "modular webserver sg",
            "name_prefix": "",
            "owner_id": "001601475366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Launched_By": "Terraform",
              "Name": "modular webserver sg"
            },
            "tags_all": {
              "Launched_By": "Terraform",
              "Name": "modular webserver sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a44e02ad3311750"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:001601475366:subnet/subnet-0515799d8f520edcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0515799d8f520edcb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001601475366",
            "tags": {
              "Launched_By": "Terraform",
              "Name": "modular subnet"
            },
            "tags_all": {
              "Launched_By": "Terraform",
              "Name": "modular subnet"
            },
            "vpc_id": "vpc-00a44e02ad3311750"
          },
          "dependencies": [
            "module.create_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.create_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:001601475366:vpc/vpc-00a44e02ad3311750",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-04383a2fbab35bc36",
            "default_route_table_id": "rtb-08c2de894d0272ccf",
            "default_security_group_id": "sg-00ce2ef7b3c03d9e3",
            "dhcp_options_id": "dopt-0a8937f7b9748b59d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00a44e02ad3311750",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08c2de894d0272ccf",
            "owner_id": "001601475366",
            "tags": {
              "Launched_By": "Terraform",
              "Name": "modular vpc"
            },
            "tags_all": {
              "Launched_By": "Terraform",
              "Name": "modular vpc"
            }
          }
        }
      ]
    }
  ]
}